# lila

./: .gitignore  Dockerfile  README.md  go.mod  go.sum  main.go  main_test.go
.github/workflows/: Integration.yml  ci.yml  cicd-k8s.yml  cicd-rust.yml  cicd.yml  integration-rust.yml
api/: Dockerfile  README.md  go.mod  go.sum  main.go  main_test.go
api-rust/: Cargo.toml  Dockerfile
api-rust/configuration/: base.yaml  local.yaml  production.yaml
api-rust/src/: configuration.rs  dictionary.rs  lib.rs  main.rs  startup.rs
api-rust/src/routes/: completion.rs  health_check.rs  mod.rs
api-rust/src/utils/: dictionary.rs  mod.rs  random_string.rs
api-rust/static/: gre_vocab_list.json  gre_vocab_list.txt
api/static/: gre_vocab_list.json
api_rust/: Cargo.toml  configuration.yaml
api_rust/src/: configuration.rs  main.rs  startup.rs
api_rust/src/routes/: completion.rs  mod.rs
scripts/: convert_to_json.py
ui/: .env.production  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  postcss.config.cjs  tailwind.config.js
ui/.svelte-kit/: ambient.d.ts
ui/src/: About.tsx  ActionButton.tsx  App.tsx  AppView.tsx  CreateAccount.tsx  Home.tsx  Login.tsx  Nav.tsx  PageTracking.tsx  Toolbar.tsx  index.css  main.tsx
ui/src/GRE/: GREHome.tsx  SentenceCompletion.tsx  SentenceCompletionByKey.tsx  completionAPI.ts  completionAPI.tsx  completionByKeyAPI.tsx
