[package]
name = "api-rust"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]

# For web app
tracing-log = "0.1"
tracing-bunyan-formatter = "0.3"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing = { version = "0.1", features = ["log"] }
config = "0.13"
serde = { version = "1", features = ["derive"]}
serde_json = "1.0"
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# For OpenAI connection
openai_api_rust = "0.1.8"

# General
rand = "0.8.5"
